--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@ html,body{overflow-y:auto;overflow-x:hidden;}
     .table th[data-key="contenedor"], .table td[data-key="contenedor"]{width:25ch;max-width:25ch;}
     .table td[data-key="contenedor"]{white-space:normal;}
     .clamp2{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;word-break:break-word;}
+    .clamp3{display:-webkit-box;-webkit-line-clamp:3;-webkit-box-orient:vertical;overflow:hidden;word-break:break-word;white-space:normal;}
+
 
     .mono{font-variant-numeric:tabular-nums;font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,monospace;}
 
@@ -230,6 +232,28 @@ html,body{overflow-y:auto;overflow-x:hidden;}
   #summaryWrap .table th, #summaryWrap .table td{ white-space:nowrap; }
   #summaryWrap .table td:first-child{ white-space:nowrap; }
   .sumRowTop td{ border-top:2px solid rgba(255,255,255,.12); }
+
+/* --- REQ#4 TABLERO: mostrar barra horizontal (sin ocultar scrollbars) --- */
+#boardView .tableWrap{ overflow:auto !important; scrollbar-width:auto !important; -ms-overflow-style:auto !important; padding-bottom:10px; }
+#boardView .tableWrap::-webkit-scrollbar{ height:12px !important; width:12px !important; display:block !important; }
+#boardView #table{ width:max-content !important; min-width:100% !important; }
+#boardView #table thead th, #boardView #table tbody td{ white-space:nowrap; }
+
+/* --- REQ#6 TABLERO: Indicación en 3 renglones (más esbelta) --- */
+#boardView td[data-key="indicacion"]{ text-align:left; }
+#screenView td[data-key="indicacion"]{ text-align:left; }
+
+/* --- REQ#8 RESUMEN: sombrear encabezados por estatus (mismos colores del tablero) --- */
+#tableSummary thead th.sumHdr{ color:#111; font-weight:900; }
+#tableSummary thead th.sumHdr.st-reportado{ background: var(--st-rep); }
+#tableSummary thead th.sumHdr.st-pend{ background: var(--st-pend); }
+#tableSummary thead th.sumHdr.st-ok{ background: var(--st-ok); }
+#tableSummary thead th.sumHdr.st-proceso{ background: var(--st-proc); }
+#tableSummary thead th.sumHdr.st-espera{ background: var(--st-esp); }
+#tableSummary thead th.sumHdr.st-hold{ background: var(--st-hold); }
+#tableSummary thead th.sumHdr.st-cuar{ background: var(--st-cuar); }
+#tableSummary thead th.sumHdr.st-rech{ background: var(--st-rech); color:#fff; }
+
 </style>
 </head>
 <body>
@@ -287,13 +311,12 @@ html,body{overflow-y:auto;overflow-x:hidden;}
       <table class="table" id="table">
         <thead>
           <tr>
-            <th data-key="folio">No</th>
+                        <th data-key="folio">No</th>
             <th data-key="contenedor">Contenedor</th>
             <th data-key="cuenta">Cuenta</th>
             <th data-key="cedis">Cedis</th>
             <th data-key="status">Estatus</th>
             <th data-key="fecha">Fecha</th>
-            <th data-key="liberado_fecha">F. liberación</th>
             <th data-key="indicacion">Indicación</th>
             <th data-key="anden">Andén</th>
             <th data-key="arribo_at">Arribo</th>
@@ -301,8 +324,11 @@ html,body{overflow-y:auto;overflow-x:hidden;}
             <th data-key="responsable">Responsable</th>
             <th data-key="inicio_at">Inicio</th>
             <th data-key="fin_at">Fin</th>
+            <th data-key="descarga_concl_fecha">F. descarga concluida</th>
+            <th data-key="liberado_fecha">F. liberación</th>
             <th data-key="cajas">Cajas</th>
             <th data-key="tarimas">Tarimas</th>
+            <th data-key="pallets">Pallets</th>
           </tr>
         </thead>
         <tbody id="tbody"></tbody>
@@ -365,13 +391,12 @@ html,body{overflow-y:auto;overflow-x:hidden;}
         <table class="table" id="tableScreen">
           <thead>
             <tr>
-              <th data-key="folio">No</th>
+                            <th data-key="folio">No</th>
               <th data-key="contenedor">Contenedor</th>
               <th data-key="cuenta">Cuenta</th>
               <th data-key="cedis">Cedis</th>
               <th data-key="status">Estatus</th>
               <th data-key="fecha">Fecha</th>
-              <th data-key="liberado_fecha">F. liberación</th>
               <th data-key="indicacion">Indicación</th>
               <th data-key="anden">Andén</th>
               <th data-key="arribo_at">Arribo</th>
@@ -379,8 +404,11 @@ html,body{overflow-y:auto;overflow-x:hidden;}
               <th data-key="responsable">Responsable</th>
               <th data-key="inicio_at">Inicio</th>
               <th data-key="fin_at">Fin</th>
+              <th data-key="descarga_concl_fecha">F. descarga concluida</th>
+              <th data-key="liberado_fecha">F. liberación</th>
               <th data-key="cajas">Cajas</th>
               <th data-key="tarimas">Tarimas</th>
+              <th data-key="pallets">Pallets</th>
             </tr>
           </thead>
           <tbody id="tbodyScreen"></tbody>
@@ -443,11 +471,15 @@ html,body{overflow-y:auto;overflow-x:hidden;}
               <div class="muted" style="font-size:12px">Tarimas</div>
               <input class="input" id="f_tarimas" placeholder="" style="width:100%" />
             </div>
+            <div>
+              <div class="muted" style="font-size:12px">Pallets</div>
+              <input class="input" id="f_pallets" inputmode="numeric" placeholder="" style="width:100%" />
+            </div>
           </div>
           <div style="height:10px"></div>
           <div style="display:flex;gap:10px;flex-wrap:wrap;">
             <button class="btn" id="btnAdd">Agregar</button>
-            <button class="btn secondary" id="btnSeed">Cargar histórico 2026/01/07</button>
+            <button class="btn secondary hidden" id="btnSeed">Cargar histórico 2026/01/07</button>
             <button class="btn secondary" id="btnCloseDay">Cerrar día (archivar concluidos)</button>
             <button class="btn danger" id="btnReset">Desconectar nube</button>
           </div>
@@ -910,14 +942,13 @@ html,body{overflow-y:auto;overflow-x:hidden;}
   function setWorkDate(v){ setWorkRange(v, ''); }
 
 // ------------------- Column visibility -------------------
-  const COLS = [
+    const COLS = [
     {key:'folio', label:'No'},
     {key:'contenedor', label:'Contenedor'},
     {key:'cuenta', label:'Cuenta'},
     {key:'cedis', label:'Cedis'},
     {key:'status', label:'Estatus'},
     {key:'fecha', label:'Fecha'},
-    {key:'liberado_fecha', label:'F. liberación'},
     {key:'indicacion', label:'Indicación'},
     {key:'anden', label:'Andén'},
     {key:'arribo_at', label:'Arribo'},
@@ -925,8 +956,11 @@ html,body{overflow-y:auto;overflow-x:hidden;}
     {key:'responsable', label:'Responsable'},
     {key:'inicio_at', label:'Inicio'},
     {key:'fin_at', label:'Fin'},
+    {key:'descarga_concl_fecha', label:'F. descarga concluida'},
+    {key:'liberado_fecha', label:'F. liberación'},
     {key:'cajas', label:'Cajas'},
     {key:'tarimas', label:'Tarimas'},
+    {key:'pallets', label:'Pallets'},
   ];
 
   function loadCols(){
@@ -935,6 +969,10 @@ html,body{overflow-y:auto;overflow-x:hidden;}
       if(Array.isArray(v) && v.length){
         // migración: agrega 'fecha' por defecto si no existe
         if(!v.includes('fecha')) v.push('fecha');
+                // migración: agrega columnas nuevas
+        if(!v.includes('descarga_concl_fecha')) v.push('descarga_concl_fecha');
+        if(!v.includes('liberado_fecha')) v.push('liberado_fecha');
+        if(!v.includes('pallets')) v.push('pallets');
         return v;
       }
     }catch{}
@@ -1073,6 +1111,7 @@ html,body{overflow-y:auto;overflow-x:hidden;}
       indicacion: d.indicacion ?? '',
       cajas: d.cajas ?? '',
       tarimas: d.tarimas ?? '',
+      pallets: d.pallets ?? '',
       arribo_at: d.arribo_at ?? '',
       asignacion_at: d.asig_cortina_at ?? '',
       inicio_at: d.inicio_descarga_at ?? '',
@@ -1199,13 +1238,15 @@ async function fetchRows(range){
 
       // Enriquecer: fechas de estatus (LIBERADO / RECHAZADO) desde shipment_events (para visibilidad y columna F. liberación)
       const ids = rows.map(r=>r.id).filter(Boolean);
-      const [libMap, rejMap] = await Promise.all([
+      const [libMap, rejMap, descMap] = await Promise.all([
         fetchStatusEventMap(ids, 'LIBERADO'),
         fetchStatusEventMap(ids, 'RECHAZADO'),
+        fetchStatusEventMap(ids, 'DESCARGA_CONCL'),
       ]);
       for(const r of rows){
         r.liberado_ymd = libMap[r.id] || '';
         r.rechazado_ymd = rejMap[r.id] || '';
+        r.descarga_concl_ymd = descMap[r.id] || '';
       }
 
       STATE.rows = rows;
@@ -1272,7 +1313,8 @@ async function fetchRows(range){
       const cw = wrap.clientWidth || window.innerWidth || 1200;
       const tw = table.scrollWidth || cw;
       let fitW = tw>0 ? Math.min(1, cw / tw) : 1;
-      fitW = Math.max(0.55, fitW * 0.98);
+      // deja margen para scroll horizontal cuando hay muchas columnas
+      fitW = Math.max(0.80, fitW * 0.98);
 
       // fit height for ~10 rows
       const availH = wrap.clientHeight || 600;
@@ -1318,16 +1360,18 @@ async function fetchRows(range){
         <td data-key="cedis">${esc(r.cedis)}</td>
         <td data-key="status">${statusPill(r.status)}</td>
         <td data-key="fecha" class="mono">${fmtYMD(r.arribo_ymd)}</td>
-        <td data-key="liberado_fecha" class="mono">${fmtYMD(r.liberado_ymd||"")}</td>
-        <td data-key="indicacion">${esc(r.indicacion)}</td>
+        <td data-key="indicacion"><div class="clamp3">${esc(r.indicacion)}</div></td>
         <td data-key="anden" class="mono">${esc(r.anden)}</td>
         <td data-key="arribo_at" class="mono">${fmtTime(r.arribo_at)}</td>
         <td data-key="asignacion_at" class="mono">${fmtTime(r.asignacion_at)}</td>
         <td data-key="responsable">${esc(r.responsable)}</td>
         <td data-key="inicio_at" class="mono">${fmtTime(r.inicio_at)}</td>
         <td data-key="fin_at" class="mono">${fmtTime(r.fin_at)}</td>
+        <td data-key="descarga_concl_fecha" class="mono">${fmtYMD(r.descarga_concl_ymd||"")}</td>
+        <td data-key="liberado_fecha" class="mono">${fmtYMD(r.liberado_ymd||"")}</td>
         <td data-key="cajas" class="mono">${esc(r.cajas==null?'':String(r.cajas))}</td>
         <td data-key="tarimas" class="mono">${esc(r.tarimas==null?'':String(r.tarimas))}</td>
+        <td data-key="pallets" class="mono">${esc(r.pallets==null?'':String(r.pallets))}</td>
       </tr>
     `).join('');
 
@@ -1438,10 +1482,20 @@ async function fetchRows(range){
       indicacion: payload.indicacion || null,
       cajas: payload.cajas ? Number(payload.cajas) : null,
       tarimas: payload.tarimas || null,
+      pallets: payload.pallets ? Number(payload.pallets) : null,
       arribo_at: now.toISOString(),
     };
 
-    const ins = await s.from('shipments').insert([row]).select('*').single();
+    let ins = await s.from('shipments').insert([row]).select('*').single();
+    if(ins.error){
+      const msg = (ins.error.message||'');
+      // compat: si la columna pallets aún no existe en tu tabla, reintenta sin ella
+      if(msg.includes('pallets')){
+        const row2 = {...row};
+        delete row2.pallets;
+        ins = await s.from('shipments').insert([row2]).select('*').single();
+      }
+    }
     if(ins.error) throw ins.error;
 
     // evento
@@ -1522,6 +1576,7 @@ async function fetchRows(range){
       indicacion: (x.indicacion||'').trim() || null,
       cajas: toInt(x.cajas),
       tarimas: (x.tarimas===0 ? '0' : (x.tarimas||'')) ? String(x.tarimas) : null,
+      pallets: toInt(x.pallets),
       is_active: !CONCLUIDOS.has(x.status),
       is_deleted: false,
     }));
@@ -1530,7 +1585,7 @@ async function fetchRows(range){
     if(ins.error){
       // Si tu tabla aun no tiene indicacion/cajas/tarimas, reintenta con columnas minimas
       const m = (ins.error.message||'');
-      if(m.includes('indicacion') || m.includes('cajas') || m.includes('tarimas')){
+      if(m.includes('indicacion') || m.includes('cajas') || m.includes('tarimas') || m.includes('pallets')){
         const minRows = SEED_20260107.map(x=>({
           cedis: x.cedis,
       cuenta: (x.cuenta||'').trim() || null,
@@ -2124,6 +2179,10 @@ document.querySelectorAll('button[data-detail]').forEach(b=>b.addEventListener('
           <div class="muted" style="font-size:12px">Tarimas</div>
           <input class="input" id="e_tarimas" value="${esc(r.tarimas)}" />
         </div>
+        <div>
+          <div class="muted" style="font-size:12px">Pallets</div>
+          <input class="input" id="e_pallets" value="${esc(r.pallets)}" />
+        </div>
 
         <div style="grid-column:1/-1">
           <div class="muted" style="font-size:12px">Nota (huella)</div>
@@ -2152,6 +2211,7 @@ document.querySelectorAll('button[data-detail]').forEach(b=>b.addEventListener('
         indicacion: (el('e_indicacion').value || '').trim(),
         cajas: (Number.isFinite(cajas) ? cajas : null),
         tarimas: (el('e_tarimas').value || '').trim(),
+        pallets: (Number.isFinite(palletsN) ? palletsN : null),
       };
       try{
         await updateFieldsCloud(id, patch, note);
@@ -2181,6 +2241,7 @@ document.querySelectorAll('button[data-detail]').forEach(b=>b.addEventListener('
       ['Fin', fmtTime(r.fin_at)],
       ['Cajas', r.cajas],
       ['Tarimas', r.tarimas],
+      ['Pallets', r.pallets],
       ['Indicación', r.indicacion],
     ];
 
@@ -2492,9 +2553,10 @@ el('dateStart').addEventListener('change', ()=>setWorkRange(el('dateStart').valu
         indicacion: (el('f_indicacion').value||'').trim(),
         cajas: (el('f_cajas').value||'').trim(),
         tarimas: (el('f_tarimas').value||'').trim(),
+        pallets: (el('f_pallets').value||'').trim(),
       });
 
-      ['f_contenedor','f_cuenta','f_anden','f_responsable','f_indicacion','f_cajas','f_tarimas'].forEach(id=>el(id).value='');
+      ['f_contenedor','f_cuenta','f_anden','f_responsable','f_indicacion','f_cajas','f_tarimas','f_pallets'].forEach(id=>el(id).value='');
       setTab('board');
     }catch(e){
       alert('Error al agregar: ' + (e?.message || e));
@@ -2668,21 +2730,22 @@ el('dateStart').addEventListener('change', ()=>setWorkRange(el('dateStart').valu
     // Acumuladores por estatus
     const acc = {};
     statusOrder.forEach(s=>{
-      acc[s.code] = {day:0, prev:0, cajas:0, tarimas:0};
+      acc[s.code] = {day:0, prev:0, cajas:0, tarimas:0, pallets:0};
     });
 
     for(const r of rows){
-      const a = acc[r.status] || (acc[r.status] = {day:0, prev:0, cajas:0, tarimas:0});
+      const a = acc[r.status] || (acc[r.status] = {day:0, prev:0, cajas:0, tarimas:0, pallets:0});
       const isDay = (range.start===range.end) ? (r.arribo_ymd === range.start) : (r.arribo_ymd >= range.start && r.arribo_ymd <= range.end);
       if(isDay) a.day += 1; else a.prev += 1;
       a.cajas += num0(r.cajas);
       a.tarimas += num0(r.tarimas);
+      a.pallets += num0(r.pallets);
     }
 
     // Columnas visibles: solo estatus con info
     const visible = statusOrder.filter(s=>{
-      const a = acc[s.code] || {day:0, prev:0, cajas:0, tarimas:0};
-      return (a.day + a.prev) > 0 || a.cajas > 0 || a.tarimas > 0;
+      const a = acc[s.code] || {day:0, prev:0, cajas:0, tarimas:0, pallets:0};
+      return (a.day + a.prev) > 0 || a.cajas > 0 || a.tarimas > 0 || a.pallets > 0;
     });
 
     const thead = el('theadSummary');
@@ -2700,7 +2763,7 @@ el('dateStart').addEventListener('change', ()=>setWorkRange(el('dateStart').valu
     thead.innerHTML = `
       <tr>
         <th style="min-width:220px">CONTENEDORES POR ESTATUS</th>
-        ${visible.map(s=>`<th>${esc(s.label)}</th>`).join('')}
+        ${visible.map(s=>`<th class="sumHdr ${statusClass(s.code)}">${esc(s.label)}</th>`).join('')}
         <th>GRAN TOTAL</th>
       </tr>
     `;
@@ -2708,23 +2771,25 @@ el('dateStart').addEventListener('change', ()=>setWorkRange(el('dateStart').valu
     function sumRow(key){
       let total = 0;
       for(const s of visible){
-        const a = acc[s.code] || {day:0, prev:0, cajas:0, tarimas:0};
+        const a = acc[s.code] || {day:0, prev:0, cajas:0, tarimas:0, pallets:0};
         if(key==='day') total += a.day;
         else if(key==='prev') total += a.prev;
         else if(key==='total') total += (a.day + a.prev);
         else if(key==='cajas') total += a.cajas;
         else if(key==='tarimas') total += a.tarimas;
+        else if(key==='pallets') total += a.pallets;
       }
       return total;
     }
 
     function cellVal(s, key){
-      const a = acc[s.code] || {day:0, prev:0, cajas:0, tarimas:0};
+      const a = acc[s.code] || {day:0, prev:0, cajas:0, tarimas:0, pallets:0};
       if(key==='day') return a.day;
       if(key==='prev') return a.prev;
       if(key==='total') return (a.day + a.prev);
       if(key==='cajas') return a.cajas;
       if(key==='tarimas') return a.tarimas;
+      if(key==='pallets') return a.pallets;
       return 0;
     }
 
@@ -2734,6 +2799,7 @@ el('dateStart').addEventListener('change', ()=>setWorkRange(el('dateStart').valu
       {key:'total', label:'TOTAL CONTENEDORES'},
       {key:'cajas', label:'TOTAL CAJAS'},
       {key:'tarimas', label:'TOTAL TARIMAS'},
+      {key:'pallets', label:'TOTAL PALLETS'},
     ];
 
     tbody.innerHTML = rowsDef.map((rd,i)=>{
@@ -2743,7 +2809,7 @@ el('dateStart').addEventListener('change', ()=>setWorkRange(el('dateStart').valu
           <td class="mono" style="font-weight:700">${esc(rd.label)}</td>
           ${visible.map(s=>{
             const v = cellVal(s, rd.key);
-            const txt = (rd.key==='cajas' || rd.key==='tarimas') ? String(Math.round(v)) : String(v);
+            const txt = (rd.key==='cajas' || rd.key==='tarimas' || rd.key==='pallets') ? String(Math.round(v)) : String(v);
             return `<td class="mono" style="text-align:center">${esc(txt)}</td>`;
           }).join('')}
           <td class="mono" style="text-align:center;font-weight:800">${esc(String(Math.round(grand)))}</td>
@@ -2889,16 +2955,18 @@ const q = (el('q')?.value || '').trim();
         <td data-key="cedis">${esc(r.cedis)}</td>
         <td data-key="status">${statusPill(r.status)}</td>
         <td data-key="fecha" class="mono">${fmtYMD(r.arribo_ymd)}</td>
-        <td data-key="liberado_fecha" class="mono">${fmtYMD(r.liberado_ymd||"")}</td>
-        <td data-key="indicacion">${esc(r.indicacion)}</td>
+        <td data-key="indicacion"><div class="clamp3">${esc(r.indicacion)}</div></td>
         <td data-key="anden" class="mono">${esc(r.anden||'')}</td>
         <td data-key="arribo_at" class="mono">${fmtHM(r.arribo_at)}</td>
         <td data-key="asignacion_at" class="mono">${fmtHM(r.asignacion_at)}</td>
         <td data-key="responsable">${esc(r.responsable||'')}</td>
         <td data-key="inicio_at" class="mono">${fmtHM(r.inicio_at)}</td>
         <td data-key="fin_at" class="mono">${fmtHM(r.fin_at)}</td>
+        <td data-key="descarga_concl_fecha" class="mono">${fmtYMD(r.descarga_concl_ymd||"")}</td>
+        <td data-key="liberado_fecha" class="mono">${fmtYMD(r.liberado_ymd||"")}</td>
         <td data-key="cajas" class="mono">${esc(r.cajas||'')}</td>
         <td data-key="tarimas" class="mono">${esc(r.tarimas||'')}</td>
+        <td data-key="pallets" class="mono">${esc(r.pallets||'')}</td>
       </tr>
     `).join('');
 
